ui: (fix) Enable vertical scrolling for Node map page
Before, main panel on Cluster Overview > Node Map page
didn't have vertical scroll bar and the remaining part of
the bottom section with map couldn't be scrolled down.

Now with enabled vertical scrollbar for main panel it is
possible to scroll Map section.

Release note (admin ui change): Add verticall scroll bar on
Cluster Overview main panel
- allows scroll down to Node Map section
- allows scroll down Node list table

Release justification: bug fixes and low-risk updates to new functionality

--- a/pkg/ui/src/views/cluster/containers/clusterOverview/cluster.styl
+++ b/pkg/ui/src/views/cluster/containers/clusterOverview/cluster.styl
@@ -28,7 +28,7 @@
   height 100%
   display flex
   flex-direction column
-  overflow hidden
+  overflow auto
 
 .cluster-overview
   .cluster-summary
@@ -257,4 +257,3 @@
   max-width $max-window-width
   position relative
   padding $spacing-smaller $spacing-medium
-  overflow hidden
